@@ -1,1 +1,7 @@
 # Oops-lab
+
+
+to run ex.11:
+
+
+java --module-path "C:\Program Files\javafx-sdk-17.0.20\lib" --add-modules javafx.controls -cp ".;C:\Users\Admin\Downloads\mysql-connector-j-26.7.0\mysql-connector-j-26.7.0.jar" StudentManagementApp
